:art: fixed header z-index

--- a/src/components/styles/header.scss
+++ b/src/components/styles/header.scss
@@ -2,6 +2,7 @@
   height: 70px;
   background-color: transparent; /* Set the background to transparent */
   text-align: center; /* Center the content */
+  z-index: 100;
 }
 
 /* Optional: Add padding or other styling if needed */
